2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.12.1.
	
==================== 2.12.0 ====================

2005-09-06  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.12.0.

2005-08-29  Tor Lillqvist  <tml@novell.com>

	* gconf-zip.in: Use correct capitalization of GConf in the zipfile
	names.

2005-08-22  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.11.93.
	
==================== 2.11.92 ====================

2005-08-22  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.11.92.

2005-08-10  Adam Weinberger  <adamw@gnome.org>

	* backends/evoldap-backend.c: Minor spelling fix
	  and capitalization tweak (fixes bug #301133)

2005-07-25  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: post-release bump to 2.11.91.

==================== 2.11.90 ====================

2005-07-25  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: Version 2.11.90.

2005-07-14  Aivars Kalvans <aivars.kalvans@inbox.lv>

	Reduce number g_string_append_c() calls (bug#309760)

	* configure.in: flockfile is not used anymore
	* gconf/gconf.c (gconf_escape_key): join two
	g_string_append_c() and g_string_append_printf() call
	* gconf/gconfd.c (read_line): use fgets() instead of getc_unlocked()
	to read a line

2005-07-13  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* gconf/gconf-client.c (gconf_client_notify):
	s/g_entry_unref/gconf_entry_unref (a typo).

2005-07-13  Aivars Kalvans <aivars.kalvans@inbox.lv>
	
	* gconf/gconf-client.c (gconf_client_notify): unref GConfEntry
	after notifying client. Fixes bug #158756

2005-06-21  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: require glib 2.7.0
	
2005-06-21  Mark McLoughlin  <mark@skynet.ie>

	Patch from Marcus Meissner <meissner@suse.de> in
	bug #308448

	* gconf/gconf-changeset.h,
	  gconf/gconf-client.h: use G_GNUC_NULL_TERMINATED for
	gconf_(client|engine)_change_set_from_current()

2005-06-18  Aivars Kalvans <aivars.kalvans@inbox.lv>
